good to present

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -59,7 +59,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">find fast a background performer</div>
+                <div class="intro-lead-in">find a background performer fast</div>
                 <div class="intro-heading">making a better film industry</div>
                 <a href="users/new" class="btn btn-xl">Sign up for free</a>
             </div>
@@ -98,7 +98,7 @@
                         <i class="fa fa-video-camera fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Casting Director</h4>
-                    <p class="text-muted">Create the request and select the backgrounds for you project.</p>
+                    <p class="text-muted">Create the request and select the backgrounds for your project.</p>
                 </div>
             </div>
         </div>
