--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/dashboards/:id"><%= image_tag "logo_fc_1.png" %></a>
+            <a class="navbar-brand page-scroll" href="/"><%= image_tag "logo_fc_1.png" %></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
