--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,34 +6,13 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
-  <!-- <link rel="stylesheet" type="text/css" href="bootstrap.css"> -->
-  <!-- <link rel="stylesheet" type="text/css" href="index.css" > -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'> -->
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
-  <!-- <script src="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script> -->
-  <!-- <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css"> -->
-  <!-- <script src="semantic/dist/semantic.min.js"></script> -->
-  <!-- jQuery -->
-  <!-- <script src="index/jquery.js"></script> -->
-
-  <!-- Bootstrap Core JavaScript -->
-  <!-- <script src="bootstrap.min.js"></script> -->
-
-  <!-- Plugin JavaScript -->
-  <!-- <script src="index/classie.js"></script>
-  <script src="index/cbpAnimatedHeader.js"></script> -->
-
-  <!-- Contact Form JavaScript -->
-  <!-- <script src="index/jqBootstrapValidation.js"></script> -->
-  <!-- <script src="index/contact_me.js"></script> -->
-
-  <!-- Custom Theme JavaScript -->
-  <!-- <script src="index/agency.js"></script> -->
 
 </head>
 <body style="background-color: #E9EAEC">
