--- a/app/views/dashboards/_user_profile.html.erb
+++ b/app/views/dashboards/_user_profile.html.erb
@@ -22,7 +22,7 @@
                   <div class="content">
                     <div class="header"><%= user.full_name %></div>
                     <div class="meta">
-                      <span class="price">Inspirationall</span>
+                      <span class="price">Talents</span>
                       <span class="stay"> </span>
                     </div>
                     <div class="description">
@@ -91,19 +91,21 @@
                   <a class="dropdown-toggle" data-toggle="dropdown"
                   role="button" aria-haspopup="true" aria-expanded="false">Add to project</a>
                   <ul class="dropdown-menu">
-                    <% @projects.each do |proj| %>
-                    <li><a><%= link_to proj.name, project_bookings_path(proj, params: {user_id: user}),
-                                                  method: :post %></a></li>
-                                                  <% end %>
+
+                    <% (@projects.for_dates(user.bookable_dates)).each do |project|%>
+                      <li><a><%= link_to project.name, project_bookings_path(project,
+                              params: {user_id: user}), method: :post %></a></li>
+                    <% end %>
+
                   </ul>
                 </div>
 
                 <div class="ui relaxed divided list">
                   <div class="item">
-                    <% @bookings.each do |book| %>
+                    <%# user.bookings.where(accepted true).each do |project| %>
                     <a class="header">
-                      <%= book.project.name %></a>
-                      <% end %>
+                      <%#= project.name %></a>
+                      <%# end %>
                   </div>
                 </div>
 
