--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,18 +1,17 @@
 <div class="col-sm-6 col-md-3">
-<br>
 <!-- --------------------- button new project --------------------------------- -->
 
       <% if current_user.role? %>
-        <br>
           <%#= link_to "Create a Project", new_project_path, class: "ui green button fluid" %>
-          <button type="button" class="btn btn-primary btn-md btn-block" data-toggle="modal"
+          <button type="button" class="ui fluid floating green button" data-toggle="modal"
           data-target="#exampleModal" data-whatever="@mdo">Create a Project</button>
+          <br>
       <% end %>
 
 
 
 <!-- --------------------- button new project end --------------------------------- -->
-    <br>
+
 
     <div class="panel panel-default">
       <div class="panel-heading text-center"><h4 class="ui header">All Projects Requests</h4></div>
@@ -30,7 +29,6 @@
                   <tr>
                       <td><h5 class="ui header"><%= link_to proj.name, proj %></h5></td>
                       <td><h5 class="ui header"><%= proj.shoot_date.strftime("%m.%d") %></h5></td>
-                      <!-- <td><h4 class="ui header">o o o</h4></td> -->
                     <% end %>
                   </tr>
               </tbody>
@@ -41,7 +39,6 @@
 
 <div class="col-xs-12 col-sm-6 col-md-9 ">
 <!-- -------------------- Search box -------------------------- -->
-  <br>
     <div class="ui segment">
       <div class="">
         <div class="ui form">
@@ -123,7 +120,7 @@
 
           <div class="fields">
               <div class="three wide field">
-                <input type="number" placeholder="Weigth from">
+                <input type="number" placeholder="Weight from">
               </div>
 
               <div class="three wide field">
@@ -131,7 +128,7 @@
               </div>
 
               <div class="three wide field">
-                <input type="number" placeholder="Heigth from">
+                <input type="number" placeholder="Height from">
               </div>
 
               <div class="three wide field">
@@ -139,12 +136,12 @@
               </div>
 
           <div class="four wide field">
-            <button class="ui green button fluid">Search</button>
+            <button class="ui green button fluid"><i class="fa fa-search"></i> &nbsp; Search </button>
           </div>
         </div>
         <hr>
         <div class="sixteen wide field">
-          <%= calendar number_of_days: 21, events: current_user.calendars do |date| %>
+          <%= calendar number_of_days: 16, events: current_user.calendars do |date| %>
             <%= link_to date.strftime("%d") %>
           <% end %>
         </div>
