--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -3,13 +3,7 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>fastcasting</title>
+    <title>FastCasting</title>
 
 </head>
 
@@ -17,7 +11,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
+        <div class="">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -36,10 +30,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#services">Product</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">About</a>
                     </li>
                     <li>
                       <a type="button" class="btn-nav" data-toggle="modal"
@@ -54,6 +48,8 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+
+
 
     <!-- Header -->
     <header>
@@ -71,7 +67,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
+                    <h2 class="section-heading">Product</h2>
                     <h3 class="section-subheading text-muted">Making the film industry shine even more.</h3>
                 </div>
             </div>
@@ -81,7 +77,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa  fa-star fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Background Performer</h4>
+                    <h2 class="service-heading">Background Performer</h2>
                     <p class="text-muted">Just update your calendar and wait to work.</p>
                 </div>
                 <div class="col-md-4">
@@ -89,7 +85,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Agent</h4>
+                    <h2 class="service-heading">Agent</h2>
                     <p class="text-muted">See the requests of directors and suggest background performers.</p>
                 </div>
                 <div class="col-md-4">
@@ -97,7 +93,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-video-camera fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Casting Director</h4>
+                    <h2 class="service-heading">Casting Director</h2>
                     <p class="text-muted">Create the request and select the backgrounds for your project.</p>
                 </div>
             </div>
@@ -157,16 +153,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; fastcasting 2016</span>
+                    <span class="copyright">Copyright &copy; FastCasting 2016</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
                         <li><a href="http://twitter.com/danielduartego"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <!-- <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <!-- <li><a href="#"><i class="fa fa-facebook"></i></a>
                         </li> -->
+                        <li><a href="https://ca.linkedin.com/in/danielduartego"><i class="fa fa-linkedin"></i></a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-4">
@@ -213,7 +209,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h3 class="ui header">Log in</h3>
+            <!-- <h2 class="ui header">Log in</h2> -->
           </div>
 
           <br>
