--- a/app/views/projects/_new.html.erb
+++ b/app/views/projects/_new.html.erb
@@ -12,6 +12,24 @@
 </div>
 
 
-  <!-- <script type="text/javascript">
-      $(".form_datetime").datetimepicker({format: 'yyyy-mm-dd hh:ii'});
-  </script> -->
+<!-- <div class="container">
+    <div class="row">
+        <div class='col-sm-6'>
+            <div class="form-group">
+                <div class='input-group date' id='datetimepicker1'>
+                    <input type='text' class="form-control" />
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <script type="text/javascript">
+            $(function () {
+                $('#datetimepicker1').datetimepicker({
+                  format: 'YYYY/MM/DD HH:mm'
+                });
+            });
+        </script>
+    </div>
+</div> -->
