--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -1,9 +1,9 @@
 <div class="text-center simple-calendar">
-  <%#= link_to fa_icon("arrow-left"), start_date: date_range.first - 1.day  %>
+  <%= link_to fa_icon("arrow-left"), start_date: date_range.first - 1.day  %>
   <%= I18n.t("date.month_names")[start_date.month].upcase %> <%#= start_date.year %>
-  <%#= link_to fa_icon("arrow-right"), start_date: date_range.last + 1.day  %>
+  <%= link_to fa_icon("arrow-right"), start_date: date_range.last + 1.day  %>
 
-  <table class="table text">
+  <table class="">
     <thead>
       <tr>
         <% date_range.slice(0, 7).each do |day| %>
