--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,7 +7,7 @@
 
 </head>
 
-<body id="page-top" class="index">
+<body id="page-top" class="index"> -->
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -220,6 +220,6 @@
       </div>
     </div>
 
-</body>
+<!-- </body>
 
-</html>
+</html> -->
