--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -212,7 +212,7 @@ section h3.section-subheading{font-size:16px;font-family:"Droid Serif","Helvetic
 
 aside.clients img{margin:50px auto}
 
-section#contact{background-color:#6666ff;background-image:url("map-image.png");background-position:center;background-repeat:no-repeat}
+section#contact{background-color:#6666ff;background-image:url('<%= asset_path("map-image.png") %> '); background-position:center;background-repeat:no-repeat}
 
 section#contact .section-heading{color:#fff}
 
