--- a/app/assets/stylesheets/index.css.erb
+++ b/app/assets/stylesheets/index.css.erb
@@ -76,7 +76,7 @@ h1,h2,h3,h4,h5,h6{font-family:Montserrat,"Helvetica Neue",Helvetica,Arial,sans-s
 
 }
 
-header{background-image: url("header-bg.jpg");background-repeat:none;background-attachment:scroll;background-position:center center;-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;-o-background-size:cover;text-align:center;color:#fff}
+header{background-image:url('<%= asset_path("header-bg.jpg") %> ');background-repeat:none;background-attachment:scroll;background-position:center center;-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;-o-background-size:cover;text-align:center;color:#fff}
 
 header .intro-text{padding-top:100px;padding-bottom:50px}
 
@@ -212,7 +212,7 @@ section h3.section-subheading{font-size:16px;font-family:"Droid Serif","Helvetic
 
 aside.clients img{margin:50px auto}
 
-section#contact{background-color:#6666ff;background-image:url('<%= asset_path("map-image.png") %> '); background-position:center;background-repeat:no-repeat}
+section#contact{background-color:#6666ff;background-image:url('<%= asset_path("map-image.png") %> ');background-position:center;background-repeat:no-repeat}
 
 section#contact .section-heading{color:#fff}
 
